    7.3, which don't support Include. When used with an older version
    of ssh, any ServerAliveInterval in ~/.ssh/config will be overridden
    by .git/annex/ssh.config.
  * S3: Support the special case endpoint needed for the cn-north-1 region.
  * Webapp: Don't list the Frankfurt region, as this (and some other new
    regions) need V4 authorization which the aws library does not yet use.

 -- Joey Hess <id@joeyh.name>  Tue, 01 Nov 2016 14:02:06 -0400

git-annex (6.20161031) unstable; urgency=medium

  * Assistant, repair: Fix ignoring of git fsck errors due to
    duplicate file entries in tree objects.
  * Linux standalone: Fix location of locale files in the bundle.
  * Fix reversion in 6.20161012 that prevented adding files with a space
    in their name.

 -- Joey Hess <id@joeyh.name>  Mon, 31 Oct 2016 18:55:59 -0400

git-annex (6.20161027) unstable; urgency=medium

  * lock, smudge: Fix edge cases where data loss could occur in v6 mode
    when the keys database was not populated.
  * upgrade: Handle upgrade to v6 when the repository already contains
    v6 unlocked files whose content is already present.
  * Improve style of offline html build of website.
  * importfeed: Drop URL parameters from file extension.
    Thanks, James MacMahon.
  * Assistant, repair: Improved filtering out of git fsck lines about
    duplicate file entries in tree objects.
  * test: Deal with gpg-agent behavior change that broke the test suite.
  * Improve ssh socket cleanup code to skip over the cruft that
    NFS sometimes puts in a directory when a file is being deleted.
  * If a transfer fails for some reason, but some data managed to be sent,
    the transfer will be retried. (The assistant already did this.)
  * Run ssh with ServerAliveInterval 60, so that stalled transfers will
    be noticed within about 3 minutes.
    (Any setting in your ~/.ssh/config or /etc/ssh/ssh_config 
    overrides this.)

 -- Joey Hess <id@joeyh.name>  Thu, 27 Oct 2016 15:21:58 -0400
