@@ -10,6 +10,7 @@ git-annex (6.20161032) UNRELEASED; urgency=medium
   * S3: Support the special case endpoint needed for the cn-north-1 region.
   * Webapp: Don't list the Frankfurt region, as this (and some other new
     regions) need V4 authorization which the aws library does not yet use.
+  * reinject --known: Avoid second, unncessary checksum of file.
 
  -- Joey Hess <id@joeyh.name>  Tue, 01 Nov 2016 14:02:06 -0400
 
